add bitmanipulate